Fixes contrast issues

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: grey;
+  background-color: #e6e6e6;
   margin: 0;
   padding: 0;
 }
